tests/ui/type-alias-impl-trait/method_resolution.next.stderr
error[E0599]: no method named `bar` found for struct `Bar<u32>` in the current scope
  --> $DIR/method_resolution.rs:22:14
   |
LL | struct Bar<T>(T);
   | ------------- method `bar` not found for this struct
...
LL |         self.bar()
   |              ^^^ method cannot be called on `Bar<u32>` due to unsatisfied trait bounds

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
